ML execution done (5 Parts)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-
-
+ml-engine/data/enhancement/raw
+ml-engine/data/enhancement/paired
+ml-engine/data/detection/backgrounds
+ml-engine/outputs/pipeline/multi_test
 ### Node ###
+ml-engine/venv
+ml-engine/detection/yolo/weights/yolov8n.pt
 # Logs
 logs
 *.log
