--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ ml-engine/scripts/start_ml_engine_gpu.ps1
 backend/scripts/start_backend_cpu.ps1
 System Failure Analysis & Stabilization Plan.md
 Milestone-1 Implementation Plan.md
+Milestone-2 Implementation Plan.md
 Milestone-3 Implementation Plan.md
 Milestone-4 Implementation Plan.md
 Part 1_ The Hybrid Approach (Theory Only).md
